--- a/deployment/vercel.json
+++ b/deployment/vercel.json
@@ -1,10 +1,11 @@
 {
   "version": 2,
   "builds": [
-    { "src": "*.html", "use": "@vercel/static" },
-    { "src": "*.js", "use": "@vercel/node" }
+    { "src": "frontend/**/*", "use": "@vercel/static" }
   ],
   "routes": [
-    { "src": "/(.*)", "dest": "/$1" }
+    { "src": "/", "dest": "/frontend/index.html" },
+    { "src": "/widget.js", "dest": "/frontend/widget.js" },
+    { "src": "/(.*)", "dest": "/frontend/$1" }
   ]
 }
