--- a/backend/package.json
+++ b/backend/package.json
@@ -1,18 +1,20 @@
 {
-  "name": "ai-assistant",
+  "name": "ai-chat-backend",
   "version": "1.0.0",
-  "private": true,
+  "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "build": "npm install && pip install -r requirements.txt"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "express-rate-limit": "^6.7.0",
     "helmet": "^7.0.0",
-    "express-rate-limit": "^6.9.0"
+    "dotenv": "^16.0.3"
   },
-  "devDependencies": {
-    "nodemon": "^3.0.1"
+  "engines": {
+    "node": ">=14.0.0",
+    "python": "3.9.0"
   }
 }
