--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -1,13 +1,12 @@
 services:
   - type: web
     name: ai-chat-backend
-    env: node
-    buildCommand: npm install && pip install -r requirements.txt
+    env: python
+    buildCommand: ./build.sh
     startCommand: node server.js
     envVars:
-      - key: PORT
-        value: 3000
-      - key: NODE_ENV
-        value: production
-      - key: PYTHON_PATH
-        value: python3
+      - key: PYTHON_VERSION
+        value: 3.9.0
+      - key: NODE_VERSION
+        value: 16
+    healthCheckPath: /health
