--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -1,12 +1,21 @@
 services:
   - type: web
     name: ai-chat-backend
-    env: python
-    buildCommand: ./build.sh
+    env: node
+    buildCommand: npm install
     startCommand: node server.js
     envVars:
-      - key: PYTHON_VERSION
-        value: 3.10.14
-      - key: NODE_VERSION
-        value: 16
-    healthCheckPath: /health
+      - key: PORT
+        value: 3000
+      - key: NODE_ENV
+        value: production
+    headers:
+      - path: /*
+        name: Access-Control-Allow-Origin
+        value: "*"
+      - path: /*
+        name: Access-Control-Allow-Methods
+        value: "GET,POST,OPTIONS"
+      - path: /*
+        name: Access-Control-Allow-Headers
+        value: "Content-Type,Authorization,Origin,Accept"
