--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -5,17 +5,18 @@ services:
     buildCommand: npm install
     startCommand: node server.js
     envVars:
-      - key: PORT
-        value: 3000
       - key: NODE_ENV
         value: production
     headers:
       - path: /*
         name: Access-Control-Allow-Origin
-        value: "*"
+        value: "https://ai-4-chat-ai-assistant.vercel.app"
       - path: /*
         name: Access-Control-Allow-Methods
         value: "GET,POST,OPTIONS"
       - path: /*
         name: Access-Control-Allow-Headers
         value: "Content-Type,Authorization,Origin,Accept"
+      - path: /*
+        name: Access-Control-Allow-Credentials
+        value: "true"
